# treinamento

./: .gitignore  parametros.conf  pyproject.toml  servidor.py  template.py  template1.py  teste_manual.pyw  teste_rgb.py
static/script/socket.io/4.5.1/: jquery-1.11.3.min.js  socket.io.js  socket.io.min.js
templates/: index.html
