[tool.poetry]
name = "treinamento"
version = "0.1.0"
description = ""
authors = ["Marlon1712 <marlonubl84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-SocketIO = "^5.2.0"
Flask-Cors = "^3.0.10"
simple-websocket = "^0.7.0"
gevent = "^21.12.0"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
